fix(JSON toggle): Fix visibility of JSON toggle
CNVS upgrade results in JSON toggle having a height of 0. Remove .button-collection parent class to preserve visibility.

--- a/src/styles/components/form-elements/form-row/styles.less
+++ b/src/styles/components/form-elements/form-row/styles.less
@@ -18,6 +18,11 @@
       }
     }
   }
+
+  // Add top-padding equivalent to a label
+  .form-group-without-top-label {
+    padding-top: @body-line-height + @label-margin-bottom;
+  }
 }
 
 & when (@form-row-enabled) and (@layout-screen-small-enabled) {
@@ -45,6 +50,11 @@
         margin-top: @form-row-margin-top-screen-medium;
       }
     }
+
+    // Add top-padding equivalent to a label
+    .form-group-without-top-label {
+      padding-top: @body-line-height + @label-margin-bottom;
+    }
   }
 }
 
@@ -58,6 +68,11 @@
       & + .form-row {
         margin-top: @form-row-margin-top-screen-large;
       }
+    }
+
+    // Add top-padding equivalent to a label
+    .form-group-without-top-label {
+      padding-top: @body-line-height + @label-margin-bottom;
     }
   }
 }
